--- a/local-addons/my_module/views/library_book.xml
+++ b/local-addons/my_module/views/library_book.xml
@@ -12,6 +12,17 @@
             action="library_book_action"
             parent=""
             sequence="5" />
+        <act_window id="action_wizard_loan_books"
+            name="Record Loans"
+            res_model="library.loan.wizard"
+            view_mode="form"
+            target="new"
+            />
+        <menuitem id="menu_wizard_loan_books"
+            parent="library_book_menu"
+            action="action_wizard_loan_books"
+            sequence="20"
+            />
         <record id="library_book_view_form" model="ir.ui.view">
             <field name="name">Library Book Form</field>
             <field name="model">library.book</field>
@@ -46,6 +57,32 @@
                     <field name="author_ids"/>
                     <filter string="No Authors" domain="[('author_ids','=',False)]"/>
                 </search>
+            </field>
+        </record>
+        <record id='library_loan_wizard_form' model='ir.ui.view'>
+            <field name='name'>library loan wizard form view</field>
+            <field name='model'>library.loan.wizard</field>
+            <field name='arch' type='xml'>
+            <form string="Borrow books">
+                <sheet>
+                    <group>
+                      <field name='member_id'/>
+                    </group>
+                    <group>
+                      <field name='book_ids'/>
+                    </group>
+                </sheet>
+                <footer>
+                    <button name='record_loans'
+                            string='OK'
+                            class='btn-primary'
+                            type='object'/>
+                    or
+                    <button string='Cancel'
+                            class='btn-default'
+                            special='cancel'/>
+                </footer>
+            </form>
             </field>
         </record>
     </data>
