--- a/local-addons/my_module/views/library_book.xml
+++ b/local-addons/my_module/views/library_book.xml
@@ -12,17 +12,7 @@
             action="library_book_action"
             parent=""
             sequence="5" />
-        <act_window id="action_wizard_loan_books"
-            name="Record Loans"
-            res_model="library.loan.wizard"
-            view_mode="form"
-            target="new"
-            />
-        <menuitem id="menu_wizard_loan_books"
-            parent="library_book_menu"
-            action="action_wizard_loan_books"
-            sequence="20"
-            />
+
         <record id="library_book_view_form" model="ir.ui.view">
             <field name="name">Library Book Form</field>
             <field name="model">library.book</field>
@@ -73,17 +63,33 @@
                     </group>
                 </sheet>
                 <footer>
-                    <button name='record_loans'
-                            string='OK'
-                            class='btn-primary'
-                            type='object'/>
+                    <button name='record_loans' string='OK' class='btn-primary' type='object'/>
                     or
-                    <button string='Cancel'
-                            class='btn-default'
-                            special='cancel'/>
+                    <button string='Cancel' class='btn-default' special='cancel'/>
                 </footer>
             </form>
             </field>
         </record>
+        <act_window id="action_wizard_loan_books" name="Record Loans" res_model="library.loan.wizard" view_mode="form" target="new" key2="client_action_multi"/>
+        <menuitem id="menu_wizard_loan_books" parent="library_book_menu" action="action_wizard_loan_books" sequence="20" />
+
+        <act_window id="action_all_customers"
+            name="All customers"
+            res_model="res.partner"
+            view_mode="tree,form,kanban,gantt"
+            domain="[('customer', '=', True)]"
+            context="{'default_customer': True}"
+            limit="80" />
+
+        <menuitem id="menu_custom_toplevel" name="My custom menu" />
+            <menuitem id="menu_custom_left_1" parent="menu_custom_toplevel" name="This will appear in the left bar" sequence="10" />
+                <menuitem id="menu_all_customers_1" parent="menu_custom_left_1" action="action_all_customers" sequence="10" groups="" />
+                <!--<menuitem id="menu_all_customers_2" parent="menu_custom_left_1" name="Custome name" action="action_all_customers" sequence="20" groups="" />-->
+            <menuitem id="menu_custom_left_2" name="Test menu 1" parent="menu_custom_toplevel" sequence="20"/>
+                <menuitem id="menu_action_1" name="Action menu test 1" parent="menu_custom_left_2" action="action_all_customers" sequence=""/>
+            <menuitem id="menu_custom_left_3" name="Test menu 2" parent="menu_custom_toplevel" sequence="30"/>
+                <menuitem id="menu_action_2" name="Action menu test 2" parent="menu_custom_left_3" action="action_all_customers" sequence=""/>
+            <menuitem id="menu_custom_left_4" name="Test menu 3" parent="menu_custom_toplevel" sequence="40"/>
+                <menuitem id="menu_action_3" name="Action menu test 3" parent="menu_custom_left_4" action="action_all_customers" sequence=""/>
     </data>
 </openerp>
